--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,10 @@ targets = [
 ]
 
 [dependencies]
-libc = { version = "0.2.124", features = [ "extra_traits" ] }
+libc = { git = "http://github.com/rust-lang/libc.git", rev = "cd99f681181c310abfba742aef11115d2eff03dc", features = [ "extra_traits" ] }
 bitflags = "1.1"
 cfg-if = "1.0"
+pin-utils = { version = "0.1.0", optional = true }
 
 [target.'cfg(not(target_os = "redox"))'.dependencies]
 memoffset = { version = "0.6.3", optional = true }
@@ -44,7 +45,7 @@ default = [
 ]
 
 acct = []
-aio = []
+aio = ["pin-utils"]
 dir = ["fs"]
 env = []
 event = []
@@ -101,10 +102,6 @@ path = "test/sys/test_aio_drop.rs"
 [[test]]
 name = "test-clearenv"
 path = "test/test_clearenv.rs"
-
-[[test]]
-name = "test-lio-listio-resubmit"
-path = "test/sys/test_lio_listio_resubmit.rs"
 
 [[test]]
 name = "test-mount"
