--- a/bors.toml
+++ b/bors.toml
@@ -5,7 +5,8 @@ status = [
   "Android i686",
   "Android x86_64",
   "DragonFly BSD x86_64",
-  "FreeBSD amd64 & i686",
+  "FreeBSD 12 amd64 & i686",
+  "FreeBSD 14 amd64 & i686",
   "Fuchsia x86_64",
   "Linux MIPS",
   "Linux MIPS64 el",
