--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,6 +16,8 @@ env:
 build: &BUILD
   build_script:
     - . $HOME/.cargo/env || true
+    - $TOOL +$TOOLCHAIN -Vv
+    - rustc +$TOOLCHAIN -Vv
     - $TOOL +$TOOLCHAIN $BUILD $ZFLAGS --target $TARGET --all-targets
     - $TOOL +$TOOLCHAIN doc $ZFLAGS --no-deps --target $TARGET
     - $TOOL +$TOOLCHAIN clippy $ZFLAGS --target $TARGET -- -D warnings
