Add format test to CI
To enforce uniformity for all PRs, the CI checks if the code
is formatted rigth using `cargo fmt` tool.

Signed-off-by: Costin-Robert Sin <sin.costinrobert@gmail.com>

--- a/bors.toml
+++ b/bors.toml
@@ -33,6 +33,7 @@ status = [
   "OpenBSD x86_64",
   "Redox x86_64",
   "Rust Stable",
+  "Rust Formatter",
   "iOS aarch64",
   "iOS x86_64",
   "Illumos",
