--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -320,3 +320,11 @@ task:
   check_script:
     - cargo check
   before_cache_script: rm -rf $CARGO_HOME/registry/index
+
+# Tasks that checks if the code is formatted right using `cargo fmt` tool
+task:
+  name: Rust Formatter
+  container:
+    image: rust:latest
+  setup_script: rustup +$TOOLCHAIN component add rustfmt
+  test_script: $TOOL +$TOOLCHAIN fmt --all -- --check
