Pin cross to 0.2.1, as 0.2.2 requires Rust 1.58.1

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -116,7 +116,7 @@ task:
     - curl --proto '=https' --tlsv1.2 -sSf -o rustup.sh https://sh.rustup.rs
     - sh rustup.sh -y --profile=minimal --default-toolchain $TOOLCHAIN
     - . $HOME/.cargo/env
-    - cargo install cross
+    - cargo install cross --version 0.2.1 # cross 0.2.2 bumped the MSRV to 1.58.1
     - cp Cargo.lock.msrv Cargo.lock
   << : *TEST
   before_cache_script: rm -rf $CARGO_HOME/registry/index
