--- a/release.toml
+++ b/release.toml
@@ -1,3 +1,4 @@
+dev-version = false
 pre-release-replacements = [
 	{ file="CHANGELOG.md", search="Unreleased", replace="{{version}}" },
 	{ file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}" }
