Added wrapper around getrandom syscall
Signed-off-by: Stefin <stefin@pm.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ default = [
   "hostname", "inotify", "ioctl", "kmod", "mman", "mount", "mqueue",
   "net", "personality", "poll", "process", "pthread", "ptrace", "quota",
   "reboot", "resource", "sched", "signal", "socket", "term", "time",
-  "ucontext", "uio", "user", "zerocopy",
+  "ucontext", "uio", "user", "zerocopy", "getrandom",
 ]
 
 acct = []
@@ -66,6 +66,7 @@ ptrace = ["process"]
 quota = []
 process = []
 reboot = []
+getrandom = []
 resource = []
 sched = ["process"]
 signal = ["process"]
