--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ default = [
   "hostname", "inotify", "ioctl", "kmod", "mman", "mount", "mqueue",
   "net", "personality", "poll", "process", "pthread", "ptrace", "quota",
   "reboot", "resource", "sched", "signal", "socket", "term", "time",
-  "ucontext", "uio", "user", "zerocopy", "xattr"
+  "ucontext", "uio", "user", "xattr", "zerocopy"
 ]
 
 acct = []
@@ -75,8 +75,8 @@ time = []
 ucontext = ["signal"]
 uio = []
 user = ["feature"]
-zerocopy = ["fs", "uio"]
 xattr = []
+zerocopy = ["fs", "uio"]
 
 [dev-dependencies]
 assert-impl = "0.1"
