Add zero-compromise directory iteration using getdents64
Signed-off-by: Alex Saveau <saveau.alexandre@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,10 +46,12 @@ default = [
 
 acct = []
 aio = ["pin-utils"]
-dir = ["fs"]
+dents = ["file_type"]
+dir = ["fs", "file_type"]
 env = []
 event = []
 feature = []
+file_type = []
 fs = []
 hostname = []
 inotify = []
