--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -288,6 +288,9 @@ task:
     - name: Haiku x86_64
       env:
         TARGET: x86_64-unknown-haiku
+    - name: Linux loongarch64 lp64d
+      env:
+        TARGET: loongarch64-unknown-linux-gnuf64
   setup_script:
     - rustup component add rust-src
   << : *BUILD
