--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ targets = [
 ]
 
 [dependencies]
-libc = { version = "0.2.137", features = [ "extra_traits" ] }
+libc = { git = "https://github.com/rust-lang/libc", rev = "15d27952bfa93e5e4f419c603f275486f15a050c", features = [ "extra_traits" ] }
 bitflags = "1.1"
 cfg-if = "1.0"
 pin-utils = { version = "0.1.0", optional = true }
