--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,7 +9,7 @@ env:
   RUSTDOCFLAGS: -D warnings
   TOOL: cargo
   # The MSRV
-  TOOLCHAIN: 1.63
+  TOOLCHAIN: 1.63.0
   ZFLAGS:
 
 # Tests that don't require executing the build binaries
@@ -140,24 +140,23 @@ task:
   matrix:
     - name: Linux aarch64
       arm_container:
-        image: rust:1.63
+        image: rust:1.63.0
       env:
         RUSTFLAGS: --cfg graviton -D warnings
         TARGET: aarch64-unknown-linux-gnu
     - name: Linux x86_64
       container:
-        image: rust:1.63
+        image: rust:1.63.0
       env:
         TARGET: x86_64-unknown-linux-gnu
     - name: Linux x86_64 musl
       container:
-        image: rust:1.63
+        image: rust:1.63.0
       env:
         TARGET: x86_64-unknown-linux-musl
   setup_script:
     - rustup target add $TARGET
-    - rustup toolchain install $TOOLCHAIN --profile minimal --target $TARGET
-    - rustup component add --toolchain $TOOLCHAIN clippy
+    - rustup component add clippy
   << : *TEST
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
@@ -177,7 +176,7 @@ task:
 # Tasks for cross-compiling, but no testing
 task:
   container:
-    image: rust:1.63
+    image: rust:1.63.0
   env:
     BUILD: check
     HOST: x86_64-unknown-linux-gnu
@@ -251,7 +250,7 @@ task:
 
 task:
   container:
-    image: rust:1.63
+    image: rust:1.63.0
   env:
     BUILD: check
   name: Redox x86_64
