--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ targets = [
 ]
 
 [dependencies]
-libc = { path = "../libc", features = [ "extra_traits" ] }
+libc = { git = "https://github.com/rust-lang/libc", rev = "34e9a5e37856ba122791ce6d5f04cec9c7c24f2b", features = [ "extra_traits" ] }
 bitflags = "1.1"
 cfg-if = "1.0"
 pin-utils = { version = "0.1.0", optional = true }
