netdb needs socket

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ kmod = []
 mman = []
 mount = ["uio"]
 mqueue = ["fs"]
-netdb = []
+netdb = ["socket"]
 net = ["socket"]
 personality = []
 poll = []
