--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,9 +40,10 @@ default = [
   "hostname", "inotify", "ioctl", "kmod", "mman", "mount", "mqueue",
   "net", "personality", "poll", "process", "pthread", "ptrace", "quota",
   "reboot", "resource", "sched", "signal", "socket", "term", "time",
-  "ucontext", "uio", "user", "zerocopy",
+  "ucontext", "uio", "user", "zerocopy", "no_std","uio"
 ]
 
+no_std = []
 acct = []
 aio = ["pin-utils"]
 dir = ["fs"]
