--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,7 +9,7 @@ env:
   RUSTFLAGS: -D warnings
   RUSTDOCFLAGS: -D warnings
   TOOL: cargo
-  MSRV: 1.63.0
+  MSRV: 1.65.0
   ZFLAGS:
 
 # Tests that don't require executing the build binaries
@@ -137,7 +137,7 @@ task:
     - curl --proto '=https' --tlsv1.2 -sSf -o rustup.sh https://sh.rustup.rs
     - sh rustup.sh -y --profile=minimal --default-toolchain $MSRV
     - . $HOME/.cargo/env
-    - cargo install cross --version 0.2.1 # cross 0.2.2 bumped the MSRV to 1.58.1
+    - cargo install cross --version 0.2.5
   << : *TEST
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
@@ -146,7 +146,7 @@ task:
   matrix:
     - name: Linux aarch64
       arm_container:
-        image: rust:1.63.0
+        image: rust:1.65.0
         cpu: 1
       depends_on:
         - FreeBSD 14 amd64 & i686
@@ -160,13 +160,13 @@ task:
         TARGET: aarch64-unknown-linux-gnu
     - name: Linux x86_64
       container:
-        image: rust:1.63.0
+        image: rust:1.65.0
         cpu: 1
       env:
         TARGET: x86_64-unknown-linux-gnu
     - name: Linux x86_64 musl
       container:
-        image: rust:1.63.0
+        image: rust:1.65.0
         cpu: 1
       depends_on:
         - FreeBSD 14 amd64 & i686
@@ -199,7 +199,7 @@ task:
 # Tasks for cross-compiling, but no testing
 task:
   container:
-    image: rust:1.63.0
+    image: rust:1.65.0
     cpu: 1
   depends_on:
     - FreeBSD 14 amd64 & i686
