Lock tempfile to 3.7.1 during CI on the MSRV toolchain

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -56,6 +56,7 @@ task:
     - . $HOME/.cargo/env
     - rustup target add i686-unknown-freebsd
     - rustup component add clippy
+    - cp Cargo.lock.msrv Cargo.lock
   << : *TEST
   i386_test_script:
     - . $HOME/.cargo/env
@@ -79,6 +80,7 @@ task:
     - sh rustup.sh -y --profile=minimal --default-toolchain $MSRV
     - . $HOME/.cargo/env
     - rustup component add clippy
+    - cp Cargo.lock.msrv Cargo.lock
   << : *TEST
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
@@ -132,6 +134,7 @@ task:
     - sh rustup.sh -y --profile=minimal --default-toolchain $MSRV
     - . $HOME/.cargo/env
     - cargo install cross --version 0.2.1 --locked # cross 0.2.2 bumped the MSRV to 1.58.1
+    - cp Cargo.lock.msrv Cargo.lock
   << : *TEST
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
@@ -156,6 +159,7 @@ task:
   setup_script:
     - rustup target add $TARGET
     - rustup component add clippy
+    - cp Cargo.lock.msrv Cargo.lock
   << : *TEST
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
@@ -241,6 +245,7 @@ task:
   setup_script:
     - rustup target add $TARGET
     - rustup component add clippy
+    - cp Cargo.lock.msrv Cargo.lock
   << : *BUILD
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
