Enable all features when building on docs.rs
Fixes #2110

[skip ci]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories  = ["os::unix-apis"]
 include = ["src/**/*", "test/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 
 [package.metadata.docs.rs]
+all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 targets = [
   "x86_64-unknown-linux-gnu",
