ci: check newly-added CHANGELOGs in CI (#2364)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,14 @@ env:
   MSRV: 1.69.0
 
 jobs:
+  check_new_changelog:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+
+      - name: check new CHANGELOG
+        uses: ./.github/actions/check_new_changelog
 
   macos:
     runs-on: macos-13
