Stub for wrap syslog.h
Signed-off-by: tison <wander4096@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ resource = []
 sched = ["process"]
 signal = ["process"]
 socket = ["memoffset"]
+syslog = []
 term = []
 time = []
 ucontext = ["signal"]
