turn on syslog for tests
Signed-off-by: tison <wander4096@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,30 @@
 [package]
-name        = "nix"
+name = "nix"
 description = "Rust friendly bindings to *nix APIs"
-edition     = "2021"
-version     = "0.29.0"
+edition = "2021"
+version = "0.29.0"
 rust-version = "1.69"
-authors     = ["The nix-rust Project Developers"]
-repository  = "https://github.com/nix-rust/nix"
-license     = "MIT"
-categories  = ["os::unix-apis"]
+authors = ["The nix-rust Project Developers"]
+repository = "https://github.com/nix-rust/nix"
+license = "MIT"
+categories = ["os::unix-apis"]
 include = ["build.rs", "src/**/*", "test/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 targets = [
-  "x86_64-unknown-linux-gnu",
-  "aarch64-linux-android",
-  "x86_64-apple-darwin",
-  "aarch64-apple-ios",
-  "x86_64-unknown-freebsd",
-  "x86_64-unknown-openbsd",
-  "x86_64-unknown-netbsd",
-  "x86_64-unknown-dragonfly",
-  "x86_64-fuchsia",
-  "x86_64-unknown-redox",
-  "x86_64-unknown-illumos"
+    "x86_64-unknown-linux-gnu",
+    "aarch64-linux-android",
+    "x86_64-apple-darwin",
+    "aarch64-apple-ios",
+    "x86_64-unknown-freebsd",
+    "x86_64-unknown-openbsd",
+    "x86_64-unknown-netbsd",
+    "x86_64-unknown-dragonfly",
+    "x86_64-fuchsia",
+    "x86_64-unknown-redox",
+    "x86_64-unknown-illumos"
 ]
 
 [dependencies]
@@ -81,7 +81,7 @@ semver = "1.0.7"
 nix = { path = ".", features = ["acct", "aio", "dir", "env", "event", "fanotify",
     "feature", "fs", "hostname", "inotify", "ioctl", "kmod", "mman", "mount", "mqueue",
     "net", "personality", "poll", "pthread", "ptrace", "quota", "process", "reboot",
-    "resource", "sched", "signal", "socket", "term", "time", "ucontext", "uio",
+    "resource", "sched", "signal", "socket", "syslog", "term", "time", "ucontext", "uio",
     "user", "zerocopy"] }
 
 [target.'cfg(any(target_os = "android", target_os = "linux"))'.dev-dependencies]
