Add syslog supports (#2537)
* Stub for wrap syslog.h

Signed-off-by: tison <wander4096@gmail.com>

* Wrap openlog

Signed-off-by: tison <wander4096@gmail.com>

* Make it work

Signed-off-by: tison <wander4096@gmail.com>

* lib_enums and docs

Signed-off-by: tison <wander4096@gmail.com>

* wrap priority

Signed-off-by: tison <wander4096@gmail.com>

* reduce error handle noise and add docs

Signed-off-by: tison <wander4096@gmail.com>

* try add setlogmask

Signed-off-by: tison <wander4096@gmail.com>

* Revert "try add setlogmask"

This reverts commit 98289d54e634c1f5b5b74910b41c4a9bd41ff8ab.

* fixup tests

Signed-off-by: tison <wander4096@gmail.com>

* fixup all

Signed-off-by: tison <wander4096@gmail.com>

* add changelog

Signed-off-by: tison <wander4096@gmail.com>

* turn on syslog for tests

Signed-off-by: tison <wander4096@gmail.com>

* revert irrelevant format

Signed-off-by: tison <wander4096@gmail.com>

* add new feature flags

Signed-off-by: tison <wander4096@gmail.com>

* Add back closelog

Signed-off-by: tison <wander4096@gmail.com>

* Use AsRef<OsStr> for openlog.ident

Signed-off-by: tison <wander4096@gmail.com>

* polish APIs

Signed-off-by: tison <wander4096@gmail.com>

* fixup

Signed-off-by: tison <wander4096@gmail.com>

* test on linux

Signed-off-by: tison <wander4096@gmail.com>

* test on unix

Signed-off-by: tison <wander4096@gmail.com>

* fixup flags

Signed-off-by: tison <wander4096@gmail.com>

* fixup all

Signed-off-by: tison <wander4096@gmail.com>

* Update src/syslog.rs

Co-authored-by: SteveLauC <stevelauc@outlook.com>

* refactor: use AsRef<OsStr> on non-Linux and &'static CStr on Linux for ident arg of openlog

* style: fmt

* fix: Linux build by importing CStr

---------

Signed-off-by: tison <wander4096@gmail.com>
Co-authored-by: SteveLauC <stevelauc@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ resource = []
 sched = ["process"]
 signal = ["process"]
 socket = ["memoffset"]
+syslog = []
 term = []
 time = []
 ucontext = ["signal"]
@@ -80,7 +81,7 @@ semver = "1.0.7"
 nix = { path = ".", features = ["acct", "aio", "dir", "env", "event", "fanotify",
     "feature", "fs", "hostname", "inotify", "ioctl", "kmod", "mman", "mount", "mqueue",
     "net", "personality", "poll", "pthread", "ptrace", "quota", "process", "reboot",
-    "resource", "sched", "signal", "socket", "term", "time", "ucontext", "uio",
+    "resource", "sched", "signal", "socket", "syslog", "term", "time", "ucontext", "uio",
     "user", "zerocopy"] }
 
 [target.'cfg(any(target_os = "android", target_os = "linux"))'.dev-dependencies]
