feat(ci): add OpenHarmony CI and add it to tier2 (#2599)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ env:
   MSRV: 1.69.0
   # Rust's Loongarch support merged in 1.71.0
   MSRV_LOONGARCH: 1.71.0
+  # Minimal Rust version to support all 3 official OpenHarmony targets as tier2
+  MSRV_OHOS: 1.78.0 
   RUSTFLAGS: -Dwarnings
 
 jobs:
@@ -236,6 +238,9 @@ jobs:
           - target: s390x-unknown-linux-gnu
           - target: x86_64-unknown-linux-gnux32
           - target: x86_64-unknown-netbsd
+          - target: aarch64-unknown-linux-ohos
+          - target: armv7-unknown-linux-ohos
+          - target: x86_64-unknown-linux-ohos
 
     steps:
       - name: checkout
@@ -244,7 +249,8 @@ jobs:
       - name: setup Rust
         uses: dtolnay/rust-toolchain@master
         with: 
-          toolchain: '${{ env.MSRV }}'
+           # Use a newer version rustc if it is OpenHarmony, remove this workaround after MSRV is newer than 1.78.0 
+          toolchain: "${{ contains(matrix.target, 'ohos')  && env.MSRV_OHOS || env.MSRV }}" 
           components: clippy
 
       - name: install targets
@@ -259,7 +265,7 @@ jobs:
 
       - name: before_cache_script
         run: rm -rf $CARGO_HOME/registry/index
-  
+
 
   redox:
     runs-on: ubuntu-latest
